# qc-configurational-analysis

./: README.md
QC-configurational-analysis-main/: README.md  pyproject.toml
QC-configurational-analysis-main/code/: QA.ipynb  VQE_sim.py  classical_BF_QUBO.ipynb  final_distribution_plots.py  paper_functions.py  plotScaling_QA.ipynb  postpro_VQE_QPU_serverless.py  postpro_VQE_sim.py  serverless_save_run_results.py  serverless_upload_VQE.py
QC-configurational-analysis-main/code/RawResults/: QA_clique_nsuper2_nV3.csv  QA_clique_nsuper4_nV3.csv  QA_clique_nsuper5_nV3.csv  QA_clique_nsuper6_nV3.csv  QA_clique_nsuper7_nV3.csv  QA_clique_nsuper8_nV3.csv  QA_minor_nsuper2_nV3.csv  QA_minor_nsuper3_nV3.csv  QA_minor_nsuper4_nV3.csv  QA_minor_nsuper5_nV3.csv  QA_minor_nsuper6_nV3.csv  QA_minor_nsuper7_nV3.csv  QA_nsuper2_nV3.csv  QA_nsuper3_nV3.csv  QA_nsuper4_nV3.csv  QA_nsuper5_nV3.csv  QA_nsuper6_nV3.csv  QA_nsuper7_nV3.csv  SA_nsuper10_nV3.csv  SA_nsuper11_nV3.csv  SA_nsuper12_nV3.csv  SA_nsuper13_nV3.csv  SA_nsuper14_nV3.csv  SA_nsuper15_nV3.csv  SA_nsuper16_nV3.csv  SA_nsuper2_nV3.csv  SA_nsuper3_nV3.csv  SA_nsuper4_nV3.csv  SA_nsuper5_nV3.csv  SA_nsuper6_nV3.csv  SA_nsuper7_nV3.csv  SA_nsuper8_nV3.csv  SA_nsuper9_nV3.csv
QC-configurational-analysis-main/code/distr_data/: Energy_data_postpro_Random.txt  Energy_data_postpro_VQEcVARibm_fez.txt  Energy_data_prepro_QA.txt  Energy_data_prepro_QA_clique_nsuper3_nV3_l1_chain3_at2000.txt  Energy_data_prepro_Random.txt  Energy_data_prepro_SA.txt  Energy_data_prepro_VQEcVARibm_fez.txt  Energy_data_prepro_VQEcVARstV.txt  (+12 more)
(+13 files in other folders)
