[project]
name = "kg-configurational-optimisation"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "crystalpytools==2023.12.14",
    "dwave-inspector>=0.5.2",
    "dwave-system==1.23.0",
    "ipykernel>=6.29.5",
    "jupyter>=1.1.1",
    "pylatexenc>=2.10",
    "pymatgen==2024.11.13",
    "qiskit-optimization==0.6.1",
    "qiskit==1.3.1",
    "qiskit-aer==0.15.1",
    "qiskit-ibm-catalog==0.2.0",
    "qiskit-ibm-runtime==0.34.0",
    "scipy==1.15.0",
]
